# SnakeProject

./: .gitignore  CMakeLists.txt  Snake.cpp  Source.cpp
doctest/: CMakeLists.txt
snake_test/: Source.cpp  Source.h  test.cpp
